# Nova-App

./: README.md
ArcadiaAI/: .env.example  LICENSE  PROPRIETARY.md  README.md  license  requirements.txt  run_desktop.py
ArcadiaAI SoundForge/: CHANGELOG.md  Makefile  README.md  app.py  mypy.ini  requirements.txt  setup.py
ArcadiaAI SoundForge/.github/workflows/: audiocraft_docs.yml  audiocraft_linter.yml  (+1 more)
ArcadiaAI/Sito web/: documentazioni.html  index.html
ArcadiaAI/docs/: Policy.md  ces-image.md  deepresearch.md  deepsearch.md  faq.md  index.md  privacy_policy.md  termini-di-servizio.md  tos.md
ArcadiaAI/sito_web/: documentazioni.html  index.html
ArcadiaAI/sr/: ArcadiaAI.spec  accountManager.js  app.py  deepresearch.py  memory_manager.py  oracolo_di_delphi.html  telegram_bot.py  telegraph_api.py  zip_service.py
Browser/: browser.py
Browser/Componenti/: gestore_estensioni.py
Mini tool/Gestore_Estensioni/: gestore_estensioni.py
Mini tool/Nova_Vault/: Novavault.py
Nova_Calc/: README.md  index.html  script.js  style.css
Nova_Pocket/: Cargo.toml  LICENSE  PROPRIETARY.md  README.md  web.rs
Nova_Pocket/gui/: app.js  index.html  style.css
Nova_Pocket/src/: lib.rs  main.rs
Nova_Pocket/src/p2p/: network.rs
Nova_Pocket/src/storage/: encryption.rs  manager.rs
Nova_QuickNote/: Nova_QuickNote.py  README.md
Nova_Surf/: README.md  browser.py
Nova_Surf/Servizi-Leonia+/: LICENSE  README.md  manifest.json
QuickNote/: Nova_QuickNote.py
poesie/: Avanti va' o Stella Diana.md  Celere.md  LICENSE
poesie/latino/: De Belua.md  De Ratione.md
(+10 files in other folders)
