[package]
name = "nova-pocket"
version = "0.1.0"
edition = "2021"
authors = ["Il Tuo Nome <tuo@email.com>"]
description = "Cloud storage decentralizzato open-source"
license = "GPL-3.0-or-later"  # O "MPL-2.0" se preferisci

# Dependencies per il backend Rust
[dependencies]
# --- Core P2P ---
libp2p = { version = "0.52", features = [
    "tcp", 
    "kad",       # Kademlia DHT
    "floodsub",  # Pubblicazione/Sottoscrizione
    "noise",     # Crittografia
    "websocket", # Supporto browser
] }

# --- Crittografia ---
aes-gcm = "0.10"          # AES-256
rand = "0.8"              # Generazione chiavi
sha2 = "0.10"             # Hashing

# --- Web Server (API REST) ---
warp = "0.3"              # Server HTTP
tokio = { version = "1.0", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serializzazione JSON
serde_json = "1.0"

# --- Gestione File ---
tokio-fs = "0.3"          # File system async
mime = "0.3"              # Tipi MIME per upload

# --- Logging ---
env_logger = "0.10"       # Log in console
log = "0.4"

# Dependencies per eventuale compilazione WASM (opzionale)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }

# Configurazione per il build (opzionale)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
